--- a/_config.yml
+++ b/_config.yml
@@ -35,15 +35,8 @@ url: "" # the base hostname & protocol for your site, e.g. http://example.com
 #
 # Excluded items can be processed by explicitly listing the directories or
 # their entries' file path in the `include:` list.
-#
-# exclude:
-#   - .sass-cache/
-#   - .jekyll-cache/
-#   - gemfiles/
-#   - Gemfile
-#   - Gemfile.lock
-#   - node_modules/
-#   - vendor/bundle/
-#   - vendor/cache/
-#   - vendor/gems/
-#   - vendor/ruby/
+
+exclude:
+  - scripts/
+  - Dockerfile
+  - nginx-default.conf
