--- a/.github/workflows/publish-image.yml
+++ b/.github/workflows/publish-image.yml
@@ -27,7 +27,7 @@ jobs:
       - name: Build site
         uses: helaili/jekyll-action@2.4.0
         with:
-          build_dir: /site
+          build_dir: /github/workspace/_site
           build_only: true
       - name: Build container image
         run: docker build -t registry.digitalocean.com/container-registry-bl/epos-site:$(echo ${{ github.event.inputs.tag }}) .
