--- a/.github/workflows/publish-image-docker-hub.yml
+++ b/.github/workflows/publish-image-docker-hub.yml
@@ -33,5 +33,6 @@ jobs:
       - name: Build and push
         uses: docker/build-push-action@v4
         with:
+          context: .
           push: true
           tags: spicalous/podee:epos-site-${{ github.event.inputs.tag }}
